[package]
name = "smake"
version = "0.0.2"
authors = ["ARaspiK <araspik@protonmail.com>"]
license = "MIT"
description = "A simple Make program"
edition = "2018"

repository = "https://github.com/araspik/smake"
readme = "README.md"
keywords = ["make"]
categories = ["development-tools::build-utils", "development-tools"]

[badges]
travis-ci = {repository = "araspik/smake", branch = "rust"}

[dependencies]
custom_error = "1.3.0"
regex = "1.1.0"
