[package]

# General Information
name = "samurai_app"
version = "0.0.1"
authors = [
    "ARaspiK <araspik@protonmail.com>"
]
description = "A heavy-duty make program"
license = "MIT"

# Public Use Metadata
publish = true
documentation = "https://docs.rs/samurai"
homepage = "https://github.com/araspik/samurai/blob/master/README.md"
readme = "README.md"
keywords = [
    "make",
    "make-program",
]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
]

# Code-specific Metadata
edition = '2018'

# Workspace
workspace = ".."

# Public Display Badges
[badges]
travis-ci = { repository = "araspik/samurai", branch = "master" }
codecov = { repository = "araspik/samurai", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "araspik/samurai" }
is-it-maintained-open-issues = { repository = "araspik/samurai" }
maintenance = { status = "actively-developed" }

# Profiles

# Dependencies
[dependencies]

# Features
[features]
