[package]

# General Information
name = "samurai_formats"
version = "0.0.1"
authors = [
    "ARaspiK <araspik@protonmail.com>"
]
description = "Default formats for Samurai"
license = "MIT"

# Public Use Metadata
publish = true
documentation = "https://docs.rs/samurai_formats"
homepage = "https://github.com/araspik/samurai/blob/master/README.md"
readme = "../README.md"
keywords = [
    "formats",
    "parsing",
    "make",
]
categories = [
    "parsing",
]

# Code-specific Metadata
edition = '2018'

# Worspace
workspace = ".."

# Public Display Badges
[badges]
travis-ci = { repository = "araspik/samurai", branch = "master" }
codecov = { repository = "araspik/samurai", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "araspik/samurai" }
is-it-maintained-open-issues = { repository = "araspik/samurai" }
maintenance = { status = "actively-developed" }

# Profiles

# Dependencies
[dependencies]

# Features
[features]
